--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,11 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-.inner-heading  span {
-  background-color: #c1d6d6;
+/* .inner-heading  span {
+  background-color: #F9c5f4;
   color: white;
   padding: 4px;
-}
+} */
 
 .line-symbol2 {
   padding: 0;
@@ -291,7 +291,7 @@ h1, h2, h3, h4, h5, h6 {
 .overlay {
     position: fixed;
     display: block;
-    background: #669999;
+    background: white;
     top: 0;
     border: 0;
     left: 0;
@@ -362,7 +362,7 @@ h1, h2, h3, h4, h5, h6 {
 .overlay ul li a {
     display: block;
     position: relative;
-    color: #fff;
+    color: black;
     text-decoration: none;
     overflow: hidden;
 }
@@ -746,7 +746,7 @@ figure.effect-julia:hover p {
 	width: 83%;
 	margin: 0 auto;
 	background: transparent;
-	margin-top: 8px;
+	margin-top: 10em;
 	margin-bottom: 15px;
 }
 
@@ -986,7 +986,7 @@ figure.effect-julia:hover p {
 }
 
 .inner-heading-team {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 300;
   line-height: 1.4;
   margin-bottom: 0;
