--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,12 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
+/* .col-sm-9 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
 .home-heading span {
   background-color: #c1d6d6;
   color: white;
@@ -1160,6 +1166,9 @@ figure.effect-julia:hover p {
 	PROJECT STYLES
 ------------------------------------------------------- */
 
+.commissionImages {
+  width: 20em;
+}
 
 .inner-projects {
    margin-top: 40px;
@@ -1288,7 +1297,7 @@ figure.effect-julia:hover p {
 }
 
 .projectd-padding {
-	padding-top: 65px;
+	padding-top: 12em;
 }
 
 /* ----------------------------------------------------
@@ -1472,6 +1481,8 @@ body {
 .image-project-a {
 	margin-top: 0;
 }
+
+
 
 .image-project2 {
     position:relative;
