--- a/css/style.css
+++ b/css/style.css
@@ -1225,6 +1225,7 @@ figure.effect-julia:hover p {
    margin-bottom: 0;
    padding-bottom: 50px;
    letter-spacing: 2px;
+   text-align: center;
 }
 
 .projectd-heading span {
